@@ -1,6 +1,6 @@
 # -*- Mode: python; tab-width: 4; indent-tabs-mode:nil; coding:utf-8 -*-
 # vim: tabstop=4 expandtab shiftwidth=4 softtabstop=4
-#
+
 # MDAnalysis --- https://www.mdanalysis.org
 # Copyright (c) 2006-2017 The MDAnalysis Development Team and contributors
 # (see the file AUTHORS for the full list of names)
@@ -101,16 +101,17 @@ file.
    :members:
    :inherited-members:
 
-
 Converters
 ----------
-
 Converters output information to other libraries.
+
+.. deprecated:: 2.7.0
+    All converter code has been moved to :mod:`MDAnalysis.converters` and will
+    be removed from the :mod:`MDAnalysis.coordinates.base` module in 3.0.0.
 
 .. autoclass:: ConverterBase
    :members:
    :inherited-members:
-
 
 Helper classes
 --------------
@@ -134,7 +135,7 @@ from .. import (
     _READERS, _READER_HINTS,
     _SINGLEFRAME_WRITERS,
     _MULTIFRAME_WRITERS,
-    _CONVERTERS
+    _CONVERTERS,  # remove in 3.0.0 (Issue #3404)
 )
 from .. import units
 from ..auxiliary.base import AuxReader
@@ -1783,7 +1784,10 @@ def range_length(start, stop, step):
         # The range is empty.
         return 0
 
-
+# Verbatim copy of code from converters/base.py
+# Needed to avoid circular imports before removal in
+# MDAnalysis 3.0.0
+# Remove in 3.0.0
 class _Convertermeta(type):
     # Auto register upon class creation
     def __init__(cls, name, bases, classdict):
@@ -1797,13 +1801,26 @@ class _Convertermeta(type):
                 f = f.upper()
                 _CONVERTERS[f] = cls
 
+
+# Verbatim copy of code from converters/base.py
+# Needed to avoid circular imports before removal in
+# MDAnalysis 3.0.0
+# Remove in 3.0.0
 class ConverterBase(IOBase, metaclass=_Convertermeta):
     """Base class for converting to other libraries.
 
-    See Also
-    --------
-    :mod:`MDAnalysis.converters`
+    .. deprecated:: 2.7.0
+        This class has been moved to
+        :class:`MDAnalysis.converters.base.ConverterBase` and will be removed
+        from :mod:`MDAnalysis.coordinates.base` in 3.0.0.
     """
+
+    def __init_subclass__(cls):
+        wmsg = ("ConverterBase moved from coordinates.base."
+                "ConverterBase to converters.base.ConverterBase "
+                "and will be removed from coordinates.base "
+                "in MDAnalysis release 3.0.0")
+        warnings.warn(wmsg, DeprecationWarning, stacklevel=2)
 
     def __repr__(self):
         return "<{cls}>".format(cls=self.__class__.__name__)
