@@ -13,7 +13,7 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/?? IAlibay
+??/??/?? IAlibay, ianmkenney
 
  * 2.7.0
 
@@ -22,8 +22,11 @@ Fixes
 Enhancements
 
 Changes
+  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)
 
 Deprecations
+  * coordinates.base.ConverterBase has been deprecated and will be removed in 3.0.0;
+    use converters.base.ConvertBase instead (Issue #3404)
 
 
 28/08/23 IAlibay, hmacdope, pillose, jaclark5, tylerjereddy
